--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,18 @@
 ---
 layout: default
 ---
+<div class="post">
 
-<article class="page">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
 
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
+  <article class="post-content about"> 
     {{ content }}
-  </div>
-</article>
+  </article>
+
+  {% if page.comments %}
+  {% include comments.html %}
+  {% endif %}
+
+</div> 
