--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,7 @@ $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.6em;
 
 $spacing-unit:     15px;
+$spacing-unit-neg:     -15px;
 
 $text-color:       #111;
 $background-color: #f9f9f9;
