--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -135,7 +135,7 @@
   text-align: center;
   background-color: #f9f9f9;
   border-top: 1px solid $grey-color-light;
-  margin: $spacing-unit ${-spacing-unit}; 
+  margin: $spacing-unit $spacing-unit-neg; 
   padding: $spacing-unit 0;
   font-size: 14px;
 }
