--- a/_includes/Copyright_Notice.html
+++ b/_includes/Copyright_Notice.html
@@ -7,7 +7,7 @@
     <img src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png">
   </a>
   <br />
-  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh">署名-非商业性使用-相同方式共享</a>
+  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh">除非特别说明，本博客遵循“署名-非商业性使用-相同方式共享”的创作共同协议，转载时请注明作者和出处。</a>
 
   {% else %}
 
