--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -1,20 +1,21 @@
-  <header class="post-header">
-    <h1 itemprop="name" class="post-title">{{ page.title }}</h1>
-    <meta itemprop="keywords" content="{{ page.tags | join: ',' }}" />
+<header class="post-header">
+    <h1 itemprop="name" class="post-title">
+        <a itemprop="url" class="post-link" href="{{ include.param.url | prepend: site.baseurl }}">{{ include.param.title }}</a>
+    </h1>
+    <meta itemprop="keywords" content="{{ include.param.tags | join: ',' }}" />
     <p class="post-meta">
     {{ site.locales[site.default_locale].PostedInCategories }}
-    {% for cat in page.categories %}
+    {% for cat in include.param.categories %}
     <a href="{{site.baseurl}}/categories/#{{ cat }}">{{ cat }}</a>&nbsp;
     {% endfor %} 
-    {% if page.tags != empty %}
+    {% if include.param.tags != empty %}
     {{ site.locales[site.default_locale].Taggedwith }}
-    {% for tag in page.tags %}
-    <a href="{{ site.baseurl }}/tags/#{{ tag }}" title="{{ tag }}">{{ tag }} </a>{% unless page.tags.last == tag %}, {% endunless %}
+    {% for tag in include.param.tags %}
+    <a href="{{ site.baseurl }}/tags/#{{ tag }}" title="{{ tag }}">{{ tag }} </a>{% unless include.param.tags.last == tag %}, {% endunless %}
     {% endfor %}
     {% endif %}
-    <time itemprop="datePublished" datetime="{{ page.date | date: '%Y-%m-%d' }}">
-    {{ site.locales[site.default_locale].PostDate }}{{ page.date | date: "%Y-%m-%-d" }}
+    <time itemprop="datePublished" datetime="{{ include.param.date | date: '%Y-%m-%d' }}">
+    {{ site.locales[site.default_locale].PostDate }}{{ include.param.date | date: "%Y-%m-%d" }}
     </time>
     </p>
-  </header>
-
+</header> 
