--- a/css/main.scss
+++ b/css/main.scss
@@ -7,6 +7,7 @@
 $base-font-family: 'Open Sans', Helvetica, Arial, sans-serif !important;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
+$code-font-size:  $base-font-size * 0.75;
 $base-line-height: 1.6em;
 
 $spacing-unit:     15px;
@@ -22,8 +23,8 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
-$code-backgroud-color: #29281e;
-$code-font-color:  #eee;  
+$code-backgroud-color: #f6f6f6;
+$code-font-color:  #657b83;
 
 
 // Width of the content area
@@ -52,9 +53,9 @@ $on-laptop:        800px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-"base",
-"layout",
-"_syntax-highlighting-native" // "syntax-highlighting"
+"_base",
+"_layout",
+"autumn" // "syntax-highlighting"
 ;
 
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
