--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,11 +1,10 @@
 <div class="col-sm-2">
-<!-- {% include Aboutme.html %} -->
-<!-- {% include Google_search.html%} -->
-{% include Recent_Posts.html %}
-{% include Categories.html %}
-{% include Tags.html %}
-<!-- {% include Blogroll.html %} -->
-{% include Archives.html %}
-{% include Copyright_Notice.html %}
+    <!-- {% include sidebar/aboutme.html %} -->
+    <!-- {% include sidebar/google_search.html%} -->
+    {% include sidebar/recent_posts.html %}
+    {% include sidebar/categories.html %}
+    {% include sidebar/tags.html %}
+    <!-- {% include sidebar/blogroll.html %} -->
+    {% include sidebar/archives.html %}
+    {% include sidebar/copyright.html %}
 </div>
-
