--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,10 +27,8 @@
 
 <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
-{% include google_search.js %}
-{% include google_analytics.js %}
-{% include ban.js %}
+{% include js/google_search.js %}
+{% include js/google_analytics.js %}
+{% include js/ban.js %}
 
 </head>
-
-
