--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,21 +1,39 @@
----
-layout: default_post
----
-<div class="post" itemscope itemtype="http://schema.org/BlogPosting">
+<!DOCTYPE html>
+<html>
 
-  {% include post_header.html param=page %}
+{% include head.html %}
 
-  <article class="post-content" itemprop="articleBody">
-    {{ content }}
-    <blockquote>
-  <p>本文遵循“<a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh">署名-非商业性使用-相同方式共享</a>”的创作共同协议，欢迎转载，转载时请注明作者和出处。<br>
-作者: <a href="mailto:gelitenight@gmail.com">gelitenight</a><br>
-出处: <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></p>
-</blockquote>
-  </article>
-  <hr />
+<body>
+
+<div class="container">
+
+    {% include header.html %}
+
+
+    <div class="page-content">
+        <div id="toc" style="display: block;width: 200px;position: fixed;margin-left: -230px;margin-top: -80px"></div>
+        <div class="wrapper">
+            <div class="post" itemscope itemtype="http://schema.org/BlogPosting">
+
+                {% include post_header.html param=page %}
+
+                <article class="post-content" itemprop="articleBody">
+                    {{ content }}
+                </article>
+                {% include ccc.html %}
+                <hr/>
+            </div>
+            {% include page_pagination.html%}
+            {% include comments.html %}
+        </div>
+
+    </div>
+
+    {% include post_pagination.html %}
+    {% include footer.html %}
+
 </div>
 
+</body>
 
-{% include page_pagination.html%}
-{% include comments.html %}
+</html>
